fixed profile overflow issue

--- a/client/src/css/Profile.css
+++ b/client/src/css/Profile.css
@@ -36,6 +36,7 @@
 }
 
 .profile__main {
+  overflow: auto;
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -81,6 +82,9 @@
 }
 
 @media screen and (max-width: 768px) {
+  .profile__main {
+    overflow: visible;
+  }
   .profile__container {
     width: 500px;
     flex-direction: column;
